Enhance the language translation user experience